<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_navigation_home_white_24dp"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_a_z"
        android:icon="@drawable/ic_navigation_az_white_24dp"
        android:title="@string/AZ"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_navigation_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_navigation_account_white_24dp"
        android:title="@string/account"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_shopping_bag"
        android:icon="@drawable/ic_navigation_bag_white_24dp"
        android:title="@string/shopping_bag"
        app:showAsAction="never" />
</menu>