<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/spacing_56"
        android:paddingHorizontal="@dimen/spacing_32">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_women"
            style="@style/PrimaryButtonOnDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/women"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_men"
            style="@style/PrimaryButtonOnDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_24"
            android:text="@string/men"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_women" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_kids"
            style="@style/PrimaryButtonOnDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_24"
            android:text="@string/kids"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_men" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>